--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
         
     - name: Configure AWS credentials
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_LOGIN }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
       run: |
         aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
         aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
@@ -29,7 +29,7 @@ jobs:
           
     - name: Package CloudFormation Template
       env:
-        AWS_BUCKET: ${{ secrets.BUCKET }}
+        AWS_BUCKET: ${{ env.LANDING_BUCKET }}
       run: |
         aws cloudformation package \
           --template-file templates/build.yaml \
